--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "loner": "^1.0.0",
     "mkdirp": "^3.0.1",
-    "rc": "^1.2.8"
+    "pull-split": "^0.2.1",
+    "pull-utf8-decoder": "^1.0.2",
+    "rc": "^1.2.8",
+    "rimraf": "^5.0.1",
+    "stream-to-pull-stream": "^1.7.3"
   }
 }
